--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <groupId>com.johnhunsley.async</groupId>
-    <artifactId>spring-async-example</artifactId>
+    <artifactId>spring-account-example</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -105,7 +105,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <jvmArguments>
-                        -Dspring.profiles.active=development -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+                        -Dspring.profiles.active=service -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
                     </jvmArguments>
                 </configuration>
             </plugin>
