--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,9 @@
         <version>2.1.0.RELEASE</version>
     </parent>
 
-    <groupId>com.johnhunsley.account</groupId>
+    <groupId>com.hunsley.account</groupId>
     <artifactId>spring-account-example</artifactId>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -108,6 +109,16 @@
                         -Dspring.profiles.active=service -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
                     </jvmArguments>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <attach>false</attach>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
